<resources>
    <string name="app_name">devWeekSantander</string>
    <string name="txt_saldo_disponivel">Saldo disponivel</string>
    <string name="txt_saldo_limite">Saldo + Limite</string>
    <string name="txt_extrato">Ver extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarga">Recarga</string>
    <string name="cartao_final">Cartao Final</string>
</resources>