<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:theme="?attr/actionBarTheme"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
/>
    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"
        app:layout_constraintStart_toStartOf="@id/tv_usuario"

        />

    <TextView
        android:id="@+id/tv_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"

        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tv_principal_card"
        android:layout_width="0dp"
        android:elevation="8dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_disponivel"
                android:textSize="24sp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toTopOf="@id/tv_saldo"
                app:layout_constraintLeft_toRightOf="@id/tv_saldo"
                app:layout_constraintBottom_toBottomOf="@id/tv_saldo"
                />

            <ImageView
                android:id="@+id/tv_saldo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                />

            <TextView
                android:id="@+id/tv_saldoR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="32dp"
                android:layout_marginTop="22dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/tv_saldo"

                />

            <TextView
                android:id="@+id/tv_saldo_mais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_saldo_limite"
                android:textSize="20dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldoR"
                app:layout_constraintStart_toStartOf="@id/tv_saldoR"

                />
            <TextView
                android:id="@+id/tv_saldo_mais_mais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$28.958,75"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_mais"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_mais"

                />
            <View
                android:id="@+id/tv_linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_mais"

                />

            <TextView
                android:id="@+id/tv_extrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_extrato"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/redPrimary"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_linha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tv_secundary_card"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_principal_card"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tv_imagem_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                />
            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintTop_toBottomOf="@id/tv_imagem_cards"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tv_secundary_card_transferir"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_principal_card"
        app:layout_constraintStart_toEndOf="@id/tv_secundary_card"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tv_imagem_cards_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_local_atm_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                />
            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                app:layout_constraintTop_toBottomOf="@id/tv_imagem_cards_transferir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tv_secundary_card_recarga"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_principal_card"
        app:layout_constraintStart_toEndOf="@+id/tv_secundary_card_transferir"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tv_imagem_cards_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_smartphone_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                />
            <TextView
                android:id="@+id/tv_label_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarga"
                app:layout_constraintTop_toBottomOf="@id/tv_imagem_cards_recarga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/tv_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_secundary_card"
        android:background="@color/redPrimary"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/final_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_final"
        app:layout_constraintTop_toTopOf="@id/tv_final"
        app:layout_constraintStart_toStartOf="@id/tv_final"
        app:layout_constraintBottom_toBottomOf="@id/tv_final"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/final_text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/final_text"
        app:layout_constraintStart_toEndOf="@+id/final_text"
        app:layout_constraintBottom_toBottomOf="@id/final_text"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@id/final_text_number"
        app:layout_constraintBottom_toBottomOf="@id/final_text_number"
        app:layout_constraintTop_toTopOf="@id/final_text_number"
        app:layout_constraintRight_toRightOf="@id/final_text_number"
        />




</androidx.constraintlayout.widget.ConstraintLayout>